--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+*{
+ 
+--baby-blue-eyes: #a9cef4ff;
+--charcoal: #36494eff;
+--black: #000000ff;
+--air-superiority-blue: #7ea0b7ff;
+--dark-electric-blue: #597081ff;
+--yellow-green-crayola:#CDDFA0;
+--outer-space-crayola:#2B3D41#2B3D41;
+--platinum:#E6E8E6;
+
+font-family: 'Times New Roman', Times, serif;
+
+box-sizing: border-box;
+margin: 0;
+padding: 0;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
