--- a/src/Components/LanguageSec/languages.css
+++ b/src/Components/LanguageSec/languages.css
@@ -1,121 +1,102 @@
- /*LANGUAGES */
- *{
+/*LANGUAGES */
+* {
   --baby-blue-eyes: #a9cef4ff;
-  --charcoal: #36494eff;
+  --heading: rgb(2, 129, 0);
+  --charcoal: rgb(33, 90, 32);
   --black: rgb(17, 16, 16);
   --air-superiority-blue: #7ea0b7ff;
-  --dark-electric-blue: #597081ff;
-  --yellow-green-crayola:#CDDFA0;
-  --outer-space-crayola:#2B3D41;
-  --platinum:#E6E8E6;
-  --black-accent:rgb(19, 20, 20);
-   
-   
- }
+  --dark-electric-blue: rgb(181, 223, 255);
+  --yellow-green-crayola: #cddfa0;
+  --outer-space-crayola: #2B3D41#2B3D41;
+  --platinum: #e6e8e6;
+  --black-accent: rgb(19, 20, 20);
+}
 
- .language-heading{
+.language-heading {
   text-align: center;
   font-size: 2.5rem;
-  padding:1rem;
-  color:var(--platinum);
- 
-  
+  padding: 1rem;
+  color: var(--platinum);
 }
 
-.language-heading span{
-    color:var(--charcoal);
-  
+.language-heading span {
+  color: var(--heading);
 }
 @media screen and (max-width: 950px) {
-   
-    
-  .language-heading {
-    font-size: 1rem;
-  }
-
-
-}
-.languages{
-
-  
-    background-color: var(--black);
-    min-height: 100vh;
-    padding:1rem;
-
-
-}
-@media screen and (max-width: 950px) {
-   
-    
   .language-heading {
     font-size: 1rem;
   }
 }
- .language-container {
-    
-   min-height: 70vh;
-    margin-top:30px ;
-    margin-bottom:10px ;
-    margin-right: 40px;
-    margin-left: 60px;
-    padding: 40px 0;
-    background-color: var(--black);
-    border-radius: 20px;
-    box-shadow: 3px 4px 10px 10px  rgba(3, 3, 3, 0.9);
-    
-  }
- .language__img {
-    width: 100%;
-    max-width: 100px;
-    transition: all 300ms;
-  }
-  .language:hover .language__img {
-    filter: brightness(85%);
-    opacity: 0.86;
-    transform: scale(0.9);
-  }
-  
-  .language {
-    
-    width: 25%;
-    display: flex;
-    justify-content: center;
-    position: relative;
-   
-  }
-  .language__img--wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 25px 16px;
-  }
-  
-  .language__list {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    flex-wrap: wrap;
-   
-  }
-  
-  .language__name {
-    position: absolute;
-    bottom: 0;
-    transform: scale(0);
-    transition: all 300ms;
-    color:var(--baby-blue-eyes);
-    font-size: 20px;
-    opacity: 0;
-  }
-  .language:hover .language__name {
-    transform: scale(1);
-    opacity: 1;
-  }
-  .language-row{
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 0 12px;
-  }
 
- 
+.languages {
+  background-color: var(--black);
+  max-height: 100vh;
+  padding: 1rem;
+}
+
+@media screen and (max-width: 950px) {
+  .language-heading {
+    font-size: 1rem;
+  }
+}
+.language-container {
+  max-height: 80vh;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  margin-right: 40px;
+  margin-left: 60px;
+  padding: 40px 0;
+  background-color: var(--black);
+  border-radius: 20px;
+  box-shadow: 3px 4px 10px 10px rgba(3, 3, 3, 0.9);
+}
+.language__img {
+  width: 100%;
+  max-width: 100px;
+  transition: all 300ms;
+}
+.language:hover .language__img {
+  filter: brightness(85%);
+  opacity: 0.86;
+  transform: scale(0.9);
+}
+
+.language {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+.language__img--wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 16px;
+}
+
+.language__list {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.language__name {
+  position: absolute;
+  bottom: 0;
+  transform: scale(0);
+  transition: all 300ms;
+  color: var(--baby-blue-eyes);
+  font-size: 20px;
+  opacity: 0;
+}
+.language:hover .language__name {
+  transform: scale(1);
+  opacity: 1;
+}
+.language-row {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 12px;
+}
