--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -1,6 +1,7 @@
 * {
   --baby-blue-eyes: #a9cef4ff;
-  --charcoal: #36494eff;
+  --heading: rgb(2, 129, 0);
+  --charcoal: rgb(33, 90, 32);
   --black: rgb(17, 16, 16);
   --air-superiority-blue: #7ea0b7ff;
   --dark-electric-blue: rgb(181, 223, 255);
@@ -9,6 +10,7 @@
   --platinum: #e6e8e6;
   --black-accent: rgb(19, 20, 20);
 }
+
 
 .port-heading {
   text-align: center;
@@ -20,7 +22,7 @@
 }
 
 .port-heading span {
-  color: var(--charcoal);
+  color: var(--heading);
 }
 @media screen and (max-width: 950px) {
   .port-heading {
@@ -28,20 +30,21 @@
   }
 }
 
-
 .portfolio {
- 
+
   background-color: var(--black);
   min-height: 100vh;
   padding: 1rem;
 }
+
 .container {
-  
+   
+
   background-color: var(--black);
   border-radius: 20px;
   box-shadow: 3px 4px 10px 10px rgba(3, 3, 3, 0.9);
   width: 100%;
-  max-width: 1100px;
+ 
   min-height: 100vh;
   margin: 0 auto;
   padding: 20px;
@@ -56,8 +59,10 @@
 
 
 .card {
+  width: inherit;
   position: relative;
-  min-height: 50vh;
+  min-height: 60vh;
+  max-height: 60vh;
   margin-left: 25px;
 }
 @media screen and (max-width: 773px) {
@@ -150,6 +155,7 @@
   color: rgba(255, 255, 255, 0.6);
   font-size: 15px;
   line-height: 27px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .card .card-content .footer {
@@ -159,7 +165,7 @@
 .card .card-content .footer .githublink {
   display: inline-flex;
   align-items: center;
-  color: #ffffff;
+  color: rgb(2, 129, 0);
   font-size: 15px;
   font-weight: 500;
   text-decoration: none;
@@ -256,12 +262,16 @@
 }
 
 .card-img {
+  z-index:-1;
   position: absolute;
-  object-fit: cover;
-  filter: blur(1px);
-  -webkit-filter: blur(1.5px);
+  top: 0;
+  left: 0;
+  bottom:0;
+  right: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  background: #0f1011; 
 }
 
 /* //card styles */
@@ -288,7 +298,6 @@
   transition: color 0.25s 0.0833333333s;
   position: relative;
 }
-
 .PortfolioCard {
   overflow: hidden;
   position: relative;
@@ -300,26 +309,16 @@
   box-shadow: rgba(0, 0, 0, 0.7);
   color: white;
 }
-.vid{
+.img{
   width: 100%;
   height: 100%;
+  border-radius: 5px;
   -o-object-fit: cover;
   object-fit: cover;
-  
-  background: #0f1011; 
+  filter: blur(2px);
+  -webkit-filter: blur(2.5px);
 }
-.vid-div{
-  z-index:-1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom:0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background: #0f1011; 
-}
+
 
 .grid-container {
  
@@ -331,6 +330,7 @@
   font-size: 1.2em;
 }
 .short-description {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin-top: 50px;
   color: rgb(255, 255, 255);
   justify-content: center;
