--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -89,10 +89,10 @@
   transition: all 0.3s;
   z-index: -1;
 }
-.card:hover .card-media {
+.card:hover .card:active .card-media {
   z-index: -1;
 }
-.card:hover .card-media img {
+.card:hover .card:active .card-media img {
   transform: scale(1.05);
 }
 
@@ -111,6 +111,9 @@
 .card:hover .card-media::before {
   background-color: #161616;
 }
+.card:active .card-media::before {
+  background-color: #161616;
+}
 
 .card .card-content {
   
@@ -122,7 +125,7 @@
   transition: all 0.3s;
 }
 
-.card:hover .card-content {
+.card:hover .card:active .card-content {
   opacity: 1;
 }
 
@@ -234,17 +237,17 @@
   transform: scaleX(1);
 }
 
-.card:hover .border-style span.right {
+.card:hover .card:active .border-style span.right {
   transform: scaleY(1);
   transition-delay: 0.3s;
 }
 
-.card:hover .border-style span.bottom {
+.card:hover .card:active .border-style span.bottom {
   transform: scaleX(1);
   transition-delay: 0.6s;
 }
 
-.card:hover .border-style span.left {
+.card:hover .card:active .border-style span.left {
   transform: scaleY(1);
   transition-delay: 0.9s;
 }
