--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -89,10 +89,10 @@
   transition: all 0.3s;
   z-index: -1;
 }
-.card:hover .card:active .card-media {
+.card:hover .card-media {
   z-index: -1;
 }
-.card:hover .card:active .card-media img {
+.card:hover .card-media img {
   transform: scale(1.05);
 }
 
@@ -108,12 +108,10 @@
   z-index: 1;
 }
 
-.card:hover .card-media::before {
+.card:hover ,.card:active .card-media::before {
   background-color: #161616;
 }
-.card:active .card-media::before {
-  background-color: #161616;
-}
+
 
 .card .card-content {
   
@@ -125,7 +123,7 @@
   transition: all 0.3s;
 }
 
-.card:hover .card:active .card-content {
+.card:hover .card-content {
   opacity: 1;
 }
 
@@ -237,17 +235,17 @@
   transform: scaleX(1);
 }
 
-.card:hover .card:active .border-style span.right {
+.card:hover .border-style span.right {
   transform: scaleY(1);
   transition-delay: 0.3s;
 }
 
-.card:hover .card:active .border-style span.bottom {
+.card:hover .border-style span.bottom {
   transform: scaleX(1);
   transition-delay: 0.6s;
 }
 
-.card:hover .card:active .border-style span.left {
+.card:hover .border-style span.left {
   transform: scaleY(1);
   transition-delay: 0.9s;
 }
